<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LiveGame</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="start_game">开始游戏</string>
    <string name="pause_game">暂停游戏</string>
    <string name="burn_bar_string">burn 值</string>
    <string name="live_bar_string">live 值</string>
    <string name="multiply_rate">繁衍速率</string>
    <string name="multiply_generation_string">第 0 代</string>
    <string name="random_map">随机生成</string>
    <string name="clear_map">清空</string>
   	
</resources>
